tests/paczka1/small_fuzzy/65056864.err
Error in line 3: xggI0qq S645 27,72
Error in line 2: xggI0qq S402 98,3
